<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Opcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Opciones"
            android:paddingTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/escribir"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="32dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/escribirre"
            android:scaleType="centerInside"
            android:layout_below="@id/Opcion"
            android:src="@drawable/write" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escribirre"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/escribir" />

        <ImageButton
            android:id="@+id/MisRe"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/misrecetas"
            android:scaleType="centerInside"
            android:layout_below="@id/t1"
            android:src="@drawable/recetas" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/misrecetas"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/MisRe" />


        <Button
            android:id="@+id/regresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t2"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FBA068"
            android:text="@string/Boton1" />

    </RelativeLayout>


</ScrollView>
